# runescapewikibot

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  locustfile.py  pyproject.toml  rswiki_bot.py  rswiki_bot_api.py  rswiki_scraper.py  sample.txt  start.sh
requests/: query.rest
src/: main.py  rswiki_bot.py  rswiki_bot_api.py
