[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "runescapewikibot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.72",
    "langchain-google-genai>=2.1.8",
    "langchain-text-splitters>=0.3.9",
    "langgraph>=0.5.4",
    "lxml>=6.0.0",
    "requests>=2.32.4",
    "typing-extensions>=4.14.1",
]

[project.scripts]
rswb_api = "runescapewikibot.rswiki_bot_api:run"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["requests","sitemaps"]
